# geoip_api

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
geoip_api/: main.py
geoip_api/database/: geoip_database.py
geoip_api/lib/: dependecies.py  security.py
geoip_api/model/: geoip_model_base.py
geoip_api/model/database/: database_model.py
geoip_api/model/ipstackapi/: ipstack_model.py
geoip_api/model/ipstackapi/ip_stack_example/: ipstack_api_response.json  ipstack_api_response_url.json
geoip_api/model/location/: location_model.py
geoip_api/model/user/: user_model.py
geoip_api/routers/: authentication.py  geolocation.py
test/: geoapi_api.robot
